--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "id": "4725e2ad-4da9-4c78-b84a-93d933993d39",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 103,
    "id": "175c1325-3340-4988-bac5-60007210010e",
    "metadata": {},
    "outputs": [],
@@ -37,17 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "id": "a29835d5-6e73-434f-ad29-7441e5c08018",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = load_config('model_save/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/2024_07_24_22_38_30/config.yml')"
+    "config = load_config('model_save/excitory_neurons/Exc_L2-3_CBLN2_LINC02306/2024_07_27_15_17_55/config.yml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 105,
    "id": "cd577c60-5fac-4598-8602-d577c4ac98b5",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "  'weight_decay': 0.0001}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "id": "8f6dbde7-ce2c-462a-b022-1dd1060197d8",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 107,
    "id": "bed73747-d6c5-4f9b-8e7b-171a99f1153f",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b9444059-467c-498f-8172-e297bc49e47e",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 109,
    "id": "6e8dd019-d4fa-4e02-8c0c-f8784b7f9b7c",
    "metadata": {},
    "outputs": [
@@ -130,40 +130,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Getting Marker Genes.......\n",
-      "1125\n",
-      "1125\n",
-      "2250\n",
-      "2250\n",
-      "                    0                1\n",
-      "0     ENSG00000101210  ENSG00000172270\n",
-      "1     ENSG00000099622  ENSG00000141905\n",
-      "2     ENSG00000105278  ENSG00000167658\n",
-      "3     ENSG00000178951  ENSG00000089847\n",
-      "4     ENSG00000141985  ENSG00000127663\n",
-      "...               ...              ...\n",
-      "1120  ENSG00000285395  ENSG00000103316\n",
-      "1121  ENSG00000140740  ENSG00000284218\n",
-      "1122  ENSG00000122254  ENSG00000103365\n",
-      "1123  ENSG00000006116  ENSG00000182601\n",
-      "1124  ENSG00000077235  ENSG00000171208\n",
-      "\n",
-      "[1125 rows x 2 columns]\n",
-      "                    0                1\n",
-      "0     ENSG00000101210  ENSG00000172270\n",
-      "1     ENSG00000099622  ENSG00000141905\n",
-      "2     ENSG00000105278  ENSG00000167658\n",
-      "3     ENSG00000178951  ENSG00000089847\n",
-      "4     ENSG00000141985  ENSG00000127663\n",
-      "...               ...              ...\n",
-      "1120  ENSG00000285395  ENSG00000103316\n",
-      "1121  ENSG00000140740  ENSG00000284218\n",
-      "1122  ENSG00000122254  ENSG00000103365\n",
-      "1123  ENSG00000006116  ENSG00000182601\n",
-      "1124  ENSG00000077235  ENSG00000171208\n",
-      "\n",
-      "[1125 rows x 2 columns]\n",
-      "Getting Pathway Genes.........\n",
       "Getting Masking.........\n",
       "HSA\n"
      ]
@@ -204,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 110,
    "id": "e76ec569-6cef-42b7-b125-a682aa974d27",
    "metadata": {},
    "outputs": [],
@@ -218,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 111,
    "id": "e0433817-6cf3-4408-b83c-315d7b7c1d8d",
    "metadata": {},
    "outputs": [],
@@ -247,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 112,
    "id": "4263e234-8d58-4466-aa05-3441f622838a",
    "metadata": {},
    "outputs": [],
@@ -259,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 113,
    "id": "68f44017-e6fe-4a75-a3f8-f47658bf316a",
    "metadata": {},
    "outputs": [],
@@ -289,6 +255,65 @@
     "    accuracy = 100 * correct / total\n",
     "    return accuracy, loss, predicted_list, labels_list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "00f66a8a-21d3-4200-b206-6867b98971e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_inference(train_dataloader, layers_node, masking, output_layer,model_save_dir):\n",
+    "    \n",
+    "    model = CustomNetwork(layers_node, output_layer, masking)\n",
+    "    model.load_state_dict(torch.load(f'{model_save_dir}best_model_{output_layer}_state_dict.pth'))\n",
+    "    test_accuracy, test_loss, predicted_list_test, labels_list_test = evaluate(model, test_dataloader)\n",
+    "    return test_accuracy, test_loss, predicted_list_test, labels_list_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "af361e2b-2290-4826-a3b9-29fb6804ff8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current sub-neural network has 1 hidden layers.\n",
+      "49.616695059625215\n",
+      "Current sub-neural network has 2 hidden layers.\n",
+      "49.72316865417376\n",
+      "Current sub-neural network has 3 hidden layers.\n",
+      "49.72316865417376\n",
+      "Current sub-neural network has 4 hidden layers.\n",
+      "50.27683134582624\n",
+      "Current sub-neural network has 5 hidden layers.\n",
+      "50.27683134582624\n"
+     ]
+    }
+   ],
+   "source": [
+    "for output_layer in range(2, len(masking) + 2):\n",
+    "    if config['gene_expression']['print_information']:\n",
+    "        print(\"Current sub-neural network has \" + str(output_layer - 1) + \" hidden layers.\")\n",
+    "    accuracy, loss, predicted_list, labels_list = model_inference(train_dataloader,\n",
+    "                                            layers_node,\n",
+    "                                            masking,\n",
+    "                                            output_layer,\n",
+    "                                            model_save_dir = config['model_output']['model_save_dir'] + '2024_07_27_15_17_55/'\n",
+    "                                            )  \n",
+    "    print(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60eb0e0e-aa88-4014-828b-71d5f047dc0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -442,86 +467,7 @@
    "id": "34e5a320-b44b-408c-92d3-ca993abb04e3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def model(train_dataloader , val_dataloader, test_dataloader, layers_node, masking, output_layer,model_save_dir, date_string, learning_rate=0.001, num_epochs=50, weight_decay = 0, Train = True):\n",
-    "    \n",
-    "    model = CustomNetwork(layers_node, output_layer, masking)\n",
-    "    if Train:\n",
-    "        optimizer = optim.AdamW(model.parameters(), lr=learning_rate,weight_decay = weight_decay )  # Using SGD with momentum\n",
-    "        criterion = nn.BCEWithLogitsLoss()\n",
-    "        scheduler = ReduceLROnPlateau(optimizer, mode='max', factor=0.1, patience=5, verbose=True)\n",
-    "        patience = 20\n",
-    "        best_val_accuracy = 0.0\n",
-    "        epochs_no_improve = 0\n",
-    "        early_stop = False\n",
-    "        csv_file_path = f'{model_save_dir}{date_string}/training_log_{output_layer}.csv'\n",
-    "    \n",
-    "        try:\n",
-    "            os.makedirs(f'{model_save_dir}{date_string}')\n",
-    "        except:\n",
-    "            print(('...'))\n",
-    "    \n",
-    "        with open(csv_file_path, mode='w', newline='') as file:\n",
-    "            writer = csv.writer(file)\n",
-    "            writer.writerow(['Epoch', 'Loss', 'Train_accuracy', 'Val_accuracy'])\n",
-    "        \n",
-    "        for epoch in tqdm(range(num_epochs)):\n",
-    "            if early_stop:\n",
-    "                print(\"Early stopping\")\n",
-    "                break\n",
-    "            epoch_cost = 0.\n",
-    "            \n",
-    "            total_loss = 0\n",
-    "            for batch_features,batch_targets in train_dataloader:\n",
-    "                outputs = model(batch_features)\n",
-    "                #print(outputs)\n",
-    "                #print(batch_targets)\n",
-    "                #print(outputs)\n",
-    "                loss = criterion(outputs, batch_targets)\n",
-    "                \n",
-    "                optimizer.zero_grad()\n",
-    "                loss.backward()\n",
-    "                optimizer.step()\n",
-    "                \n",
-    "                \n",
-    "            \n",
-    "            train_accuracy, train_loss, predicted_list_train, labels_list_train = evaluate(model, train_dataloader)\n",
-    "            val_accuracy, val_loss, predicted_list_val, labels_list_val = evaluate(model, val_dataloader)\n",
-    "            #scheduler.step(val_accuracy)\n",
-    "            print(f'Epoch [{epoch+1}/{num_epochs}], Train Loss: {train_loss.item():.4f}, Train_accuracy: {train_accuracy}, Val Loss: {val_loss.item():.4f}, Val_accuracy: {val_accuracy}')\n",
-    "            with open(csv_file_path, mode='a', newline='') as file:\n",
-    "                writer = csv.writer(file)\n",
-    "                writer.writerow([epoch + 1, loss.item(), train_accuracy, val_accuracy])\n",
-    "            \n",
-    "            if val_accuracy > best_val_accuracy:\n",
-    "                best_val_accuracy = val_accuracy\n",
-    "                epochs_no_improve = 0\n",
-    "            # Save the best model\n",
-    "                torch.save(model, f'{model_save_dir}{date_string}/best_model_{output_layer}.pth')\n",
-    "                torch.save(model.state_dict(), f'{model_save_dir}{date_string}/best_model_{output_layer}_state_dict.pth')\n",
-    "                print('Model saved.')\n",
-    "            else:\n",
-    "                epochs_no_improve += 1\n",
-    "        \n",
-    "            # Early stopping\n",
-    "            '''if epochs_no_improve >= patience:\n",
-    "                early_stop = True\n",
-    "                print(\"Early stopping triggered\")'''\n",
-    "            \n",
-    "    if Train:\n",
-    "        train_accuracy, train_loss, predicted_list_train, labels_list_train = evaluate(model, train_dataloader)\n",
-    "        val_accuracy, val_loss, predicted_list_val, labels_list_val = evaluate(model, val_dataloader)\n",
-    "        test_accuracy, test_loss, predicted_list_test, labels_list_test = evaluate(model, test_dataloader)\n",
-    "        print('Test Accucary', test_accuracy)\n",
-    "        output_train = (predicted_list_train, labels_list_train)\n",
-    "        output_val = (predicted_list_val, labels_list_val)\n",
-    "        \n",
-    "        return output_train, output_val,model\n",
-    "\n",
-    "    else:\n",
-    "        test_accuracy, test_loss, predicted_list_test, labels_list_test = evaluate(model, test_dataloader)\n",
-    "        return test_accuracy, test_loss, predicted_list_test, labels_list_test"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -582,19 +528,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "for output_layer in range(2, len(masking) + 2):\n",
-    "    if config['gene_expression']['print_information']:\n",
-    "        print(\"Current sub-neural network has \" + str(output_layer - 1) + \" hidden layers.\")\n",
-    "    output_train, output_val,model_dict[output_layer] = model(train_dataloader,\n",
-    "                                            val_dataloader,test_dataloader,\n",
-    "                                            layers_node,\n",
-    "                                            masking,\n",
-    "                                            output_layer,\n",
-    "                                            model_save_dir = config['model_output']['model_save_dir'],date_string = date_string,\n",
-    "                                            learning_rate=config['train']['learning_rate'],num_epochs=config['train']['epochs'],weight_decay = config['train']['weight_decay']\n",
-    "                                            )  "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
