--- a/Pytorch_Hook_function.ipynb
+++ b/Pytorch_Hook_function.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "id": "2c89d948-d983-48a2-8f6b-09e9404cb2eb",
    "metadata": {},
    "outputs": [
@@ -340,18 +340,18 @@
      "output_type": "stream",
      "text": [
       "Layer: fc1\n",
-      "Input: (tensor([[ 0.7498,  0.6912, -2.3980, -0.1224,  0.9315, -0.2159,  0.0939,  1.1583,\n",
-      "          1.1945, -1.3186]]),)\n",
-      "Output: tensor([[ 0.0233,  0.0427,  0.2770,  0.1755, -0.8390]],\n",
+      "Input: (tensor([[-1.8003,  1.4924,  0.2949,  1.4350,  0.3566,  0.5528, -0.0727,  1.4164,\n",
+      "          0.4875, -0.5567]]),)\n",
+      "Output: tensor([[ 0.0326,  0.4169,  0.3959, -0.5975,  0.3529]],\n",
       "       grad_fn=<AddmmBackward0>)\n",
       "---\n",
       "Layer: fc2\n",
-      "Input: (tensor([[0.0233, 0.0427, 0.2770, 0.1755, 0.0000]], grad_fn=<ReluBackward0>),)\n",
-      "Output: tensor([[ 0.3895,  0.2972, -0.4099]], grad_fn=<AddmmBackward0>)\n",
+      "Input: (tensor([[0.0326, 0.4169, 0.3959, 0.0000, 0.3529]], grad_fn=<ReluBackward0>),)\n",
+      "Output: tensor([[ 0.5074, -0.1749, -0.2703]], grad_fn=<AddmmBackward0>)\n",
       "---\n",
       "Layer: fc3\n",
-      "Input: (tensor([[0.3895, 0.2972, 0.0000]], grad_fn=<ReluBackward0>),)\n",
-      "Output: tensor([[0.2063]], grad_fn=<AddmmBackward0>)\n",
+      "Input: (tensor([[0.5074, 0.0000, 0.0000]], grad_fn=<ReluBackward0>),)\n",
+      "Output: tensor([[-0.4138]], grad_fn=<AddmmBackward0>)\n",
       "---\n"
      ]
     }
@@ -414,45 +414,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "id": "33e17ea6-43ac-46a3-bba2-b30dff087e11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'fc1': ([[[0.7498081922531128,\n",
-       "     0.6912314891815186,\n",
-       "     -2.397977352142334,\n",
-       "     -0.12240900844335556,\n",
-       "     0.931485652923584,\n",
-       "     -0.21590597927570343,\n",
-       "     0.09385944157838821,\n",
-       "     1.1582672595977783,\n",
-       "     1.1944986581802368,\n",
-       "     -1.3186142444610596]]],\n",
-       "  [[0.02326919138431549,\n",
-       "    0.04270434379577637,\n",
-       "    0.27698564529418945,\n",
-       "    0.17548342049121857,\n",
-       "    -0.8389754295349121]]),\n",
-       " 'fc2': ([[[0.02326919138431549,\n",
-       "     0.04270434379577637,\n",
-       "     0.27698564529418945,\n",
-       "     0.17548342049121857,\n",
-       "     0.0]]],\n",
-       "  [[0.3894943296909332, 0.2971775531768799, -0.4099433422088623]]),\n",
-       " 'fc3': ([[[0.3894943296909332, 0.2971775531768799, 0.0]]],\n",
-       "  [[0.20630180835723877]])}"
+       "SimpleNN(\n",
+       "  (fc1): Linear(in_features=10, out_features=5, bias=True)\n",
+       "  (fc2): Linear(in_features=5, out_features=3, bias=True)\n",
+       "  (fc3): Linear(in_features=3, out_features=1, bias=True)\n",
+       ")"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_dct"
+    "model"
    ]
   },
   {
