--- a/result_analysis.ipynb
+++ b/result_analysis.ipynb
@@ -306,7 +306,7 @@
     "negative_accuracy = precision_score(df['true_y'], df['pred_y'], pos_label=0)\n",
     "\n",
     "print(f'Positive Accuracy (Precision for positive class): {positive_accuracy}')\n",
-    "print(f'Negative Accuracy (Precision for negative class): {negative_accuracy}')\n"
+    "print(f'Negative Accuracy (Precision for negative class): {negative_accuracy}')"
    ]
   },
   {
