--- a/Understanding_Network_Heirarchy.ipynb
+++ b/Understanding_Network_Heirarchy.ipynb
@@ -2,24 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "52afd95a-8a90-4ff9-9b69-5b52c5f463ab",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-08-13 11:00:17.231512: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-08-13 11:00:17.240985: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:479] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-08-13 11:00:17.252444: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:10575] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-08-13 11:00:17.252462: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1442] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-08-13 11:00:17.261381: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-08-13 11:00:17.624168: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import tensorflow as tf\n",
@@ -32,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "11cb476e-e42c-4bec-b2e9-d363a343f2c6",
    "metadata": {},
    "outputs": [],
@@ -44,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "0ed823a3-1f9c-4b6b-abc9-fab29991609d",
    "metadata": {},
    "outputs": [],
@@ -52,7 +38,7 @@
     "def return_threshold_pathways(pathway_relation, ensemble_pathway_relation, h_thresh= 0.9, l_thresh = 0.1):\n",
     "    pathway_relation = pd.read_csv(pathway_relation, sep='\\t', header = None)\n",
     "    ensemble_pathway_relation = pd.read_csv(ensemble_pathway_relation, sep='\\t', header = None)\n",
-    "    print(ensemble_pathway_relation)\n",
+    "    print(ensemble_pathway_relation.head())\n",
     "    value_counts = ensemble_pathway_relation[1].value_counts()\n",
     "    df = pd.DataFrame(ensemble_pathway_relation[1].value_counts())\n",
     "    df_tmp = df[ (df['count']<=value_counts.quantile(h_thresh)) & (df['count']>=value_counts.quantile(l_thresh))]\n",
@@ -67,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "id": "af16794c-f5c1-4a86-8c98-693ff5c35638",
    "metadata": {},
    "outputs": [
@@ -75,59 +61,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "               0              1  \\\n",
-      "0          26364   R-BTA-162582   \n",
-      "1          26364   R-BTA-195253   \n",
-      "2          26364   R-BTA-195721   \n",
-      "3          26364   R-BTA-196299   \n",
-      "4          26364   R-BTA-201681   \n",
-      "...          ...            ...   \n",
-      "2774794  YPR188C  R-SCE-9716542   \n",
-      "2774795  YPR193C  R-SCE-1430728   \n",
-      "2774796  YPR193C   R-SCE-351200   \n",
-      "2774797  YPR193C   R-SCE-351202   \n",
-      "2774798  YPR193C    R-SCE-71291   \n",
+      "       0             1                                                  2  \\\n",
+      "0  26364  R-BTA-162582  https://reactome.org/PathwayBrowser/#/R-BTA-16...   \n",
+      "1  26364  R-BTA-195253  https://reactome.org/PathwayBrowser/#/R-BTA-19...   \n",
+      "2  26364  R-BTA-195721  https://reactome.org/PathwayBrowser/#/R-BTA-19...   \n",
+      "3  26364  R-BTA-196299  https://reactome.org/PathwayBrowser/#/R-BTA-19...   \n",
+      "4  26364  R-BTA-201681  https://reactome.org/PathwayBrowser/#/R-BTA-20...   \n",
       "\n",
-      "                                                         2  \\\n",
-      "0        https://reactome.org/PathwayBrowser/#/R-BTA-16...   \n",
-      "1        https://reactome.org/PathwayBrowser/#/R-BTA-19...   \n",
-      "2        https://reactome.org/PathwayBrowser/#/R-BTA-19...   \n",
-      "3        https://reactome.org/PathwayBrowser/#/R-BTA-19...   \n",
-      "4        https://reactome.org/PathwayBrowser/#/R-BTA-20...   \n",
-      "...                                                    ...   \n",
-      "2774794  https://reactome.org/PathwayBrowser/#/R-SCE-97...   \n",
-      "2774795  https://reactome.org/PathwayBrowser/#/R-SCE-14...   \n",
-      "2774796  https://reactome.org/PathwayBrowser/#/R-SCE-35...   \n",
-      "2774797  https://reactome.org/PathwayBrowser/#/R-SCE-35...   \n",
-      "2774798  https://reactome.org/PathwayBrowser/#/R-SCE-71291   \n",
-      "\n",
-      "                                                         3    4  \\\n",
-      "0                                      Signal Transduction  IEA   \n",
-      "1        Degradation of beta-catenin by the destruction...  IEA   \n",
-      "2                                         Signaling by WNT  IEA   \n",
-      "3                     Beta-catenin phosphorylation cascade  IEA   \n",
-      "4               TCF dependent signaling in response to WNT  IEA   \n",
-      "...                                                    ...  ...   \n",
-      "2774794  Signaling by Rho GTPases, Miro GTPases and RHO...  IEA   \n",
-      "2774795                                         Metabolism  IEA   \n",
-      "2774796                      Interconversion of polyamines  IEA   \n",
-      "2774797                           Metabolism of polyamines  IEA   \n",
-      "2774798          Metabolism of amino acids and derivatives  IEA   \n",
-      "\n",
-      "                                5  \n",
-      "0                      Bos taurus  \n",
-      "1                      Bos taurus  \n",
-      "2                      Bos taurus  \n",
-      "3                      Bos taurus  \n",
-      "4                      Bos taurus  \n",
-      "...                           ...  \n",
-      "2774794  Saccharomyces cerevisiae  \n",
-      "2774795  Saccharomyces cerevisiae  \n",
-      "2774796  Saccharomyces cerevisiae  \n",
-      "2774797  Saccharomyces cerevisiae  \n",
-      "2774798  Saccharomyces cerevisiae  \n",
-      "\n",
-      "[2774799 rows x 6 columns]\n"
+      "                                                   3    4           5  \n",
+      "0                                Signal Transduction  IEA  Bos taurus  \n",
+      "1  Degradation of beta-catenin by the destruction...  IEA  Bos taurus  \n",
+      "2                                   Signaling by WNT  IEA  Bos taurus  \n",
+      "3               Beta-catenin phosphorylation cascade  IEA  Bos taurus  \n",
+      "4         TCF dependent signaling in response to WNT  IEA  Bos taurus  \n"
      ]
     },
     {
@@ -320,7 +266,7 @@
        "[976295 rows x 6 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
