--- a/all_subtypes_jupyter_notebook/Excitatory_Neurons/model_training_interpretation_full_exc.ipynb
+++ b/all_subtypes_jupyter_notebook/Excitatory_Neurons/model_training_interpretation_full_exc.ipynb
@@ -10992,6 +10992,216 @@
      "text": [
       "Epoch [759/2000], Train Loss: 0.4247, Train_accuracy: 80.729127830388, Val Loss: 0.4791, Val_accuracy: 77.53420571897253\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|██████████████████████████████████████████████████████████████▋                                                                                                      | 760/2000 [3:58:51<6:26:20, 18.69s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [760/2000], Train Loss: 0.4246, Train_accuracy: 80.7589540924117, Val Loss: 0.4791, Val_accuracy: 77.6106326659956\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|██████████████████████████████████████████████████████████████▊                                                                                                      | 761/2000 [3:59:10<6:25:08, 18.65s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [761/2000], Train Loss: 0.4246, Train_accuracy: 80.76268237516467, Val Loss: 0.4790, Val_accuracy: 77.60690452223838\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|██████████████████████████████████████████████████████████████▊                                                                                                      | 762/2000 [3:59:28<6:22:44, 18.55s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [762/2000], Train Loss: 0.4245, Train_accuracy: 80.7496333855293, Val Loss: 0.4790, Val_accuracy: 77.55098236588003\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|██████████████████████████████████████████████████████████████▉                                                                                                      | 763/2000 [3:59:46<6:20:12, 18.44s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [763/2000], Train Loss: 0.4245, Train_accuracy: 80.78256654984715, Val Loss: 0.4791, Val_accuracy: 77.6740111098684\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|███████████████████████████████████████████████████████████████                                                                                                      | 764/2000 [4:00:04<6:18:44, 18.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [764/2000], Train Loss: 0.4245, Train_accuracy: 80.74714786369398, Val Loss: 0.4790, Val_accuracy: 77.55843865339448\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|███████████████████████████████████████████████████████████████                                                                                                      | 765/2000 [4:00:23<6:17:11, 18.32s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [765/2000], Train Loss: 0.4244, Train_accuracy: 80.77200308204708, Val Loss: 0.4790, Val_accuracy: 77.64977817544644\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|███████████████████████████████████████████████████████████████▏                                                                                                     | 766/2000 [4:00:41<6:17:05, 18.34s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [766/2000], Train Loss: 0.4243, Train_accuracy: 80.77200308204708, Val Loss: 0.4790, Val_accuracy: 77.59199194720948\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|███████████████████████████████████████████████████████████████▎                                                                                                     | 767/2000 [4:00:59<6:15:57, 18.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [767/2000], Train Loss: 0.4243, Train_accuracy: 80.7726244625059, Val Loss: 0.4790, Val_accuracy: 77.61249673787421\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|███████████████████████████████████████████████████████████████▎                                                                                                     | 768/2000 [4:01:17<6:15:19, 18.28s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [768/2000], Train Loss: 0.4243, Train_accuracy: 80.77386722342355, Val Loss: 0.4790, Val_accuracy: 77.63300152853894\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|███████████████████████████████████████████████████████████████▍                                                                                                     | 769/2000 [4:01:35<6:14:15, 18.24s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [769/2000], Train Loss: 0.4242, Train_accuracy: 80.78194516938831, Val Loss: 0.4790, Val_accuracy: 77.56962308466615\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 38%|███████████████████████████████████████████████████████████████▌                                                                                                     | 770/2000 [4:01:54<6:13:43, 18.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [770/2000], Train Loss: 0.4242, Train_accuracy: 80.78878035443542, Val Loss: 0.4790, Val_accuracy: 77.65723446296089\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 39%|███████████████████████████████████████████████████████████████▌                                                                                                     | 771/2000 [4:02:12<6:13:11, 18.22s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [771/2000], Train Loss: 0.4241, Train_accuracy: 80.78940173489424, Val Loss: 0.4790, Val_accuracy: 77.55843865339448\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 39%|███████████████████████████████████████████████████████████████▋                                                                                                     | 772/2000 [4:02:30<6:13:01, 18.23s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [772/2000], Train Loss: 0.4241, Train_accuracy: 80.78194516938831, Val Loss: 0.4790, Val_accuracy: 77.63859374417477\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 39%|███████████████████████████████████████████████████████████████▊                                                                                                     | 773/2000 [4:02:49<6:15:11, 18.35s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [773/2000], Train Loss: 0.4240, Train_accuracy: 80.80990729003554, Val Loss: 0.4789, Val_accuracy: 77.6106326659956\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 39%|███████████████████████████████████████████████████████████████▊                                                                                                     | 774/2000 [4:03:08<6:20:30, 18.62s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [774/2000], Train Loss: 0.4240, Train_accuracy: 80.8043148659061, Val Loss: 0.4789, Val_accuracy: 77.63113745666033\n"
+     ]
     }
    ],
    "source": [
