--- a/Understanding_Celltics.ipynb
+++ b/Understanding_Celltics.ipynb
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "7a228079-0871-4834-8233-f0f00591ad0e",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "2d2d6ce4-dfb7-469f-9033-bbc7faf03e92",
    "metadata": {},
    "outputs": [
@@ -1835,7 +1835,7 @@
        "[7251 rows x 20731 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1846,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "b1f88ac4-c927-4098-8f17-f4e282df95d1",
    "metadata": {},
    "outputs": [
@@ -1953,7 +1953,7 @@
        "[20731 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 20,
    "id": "c2aef732-0480-4718-94b2-30736798af83",
    "metadata": {},
    "outputs": [
@@ -1982,7 +1982,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "ea92cfcc-1f48-48a4-a0c8-760b5961ed0a",
    "metadata": {},
    "outputs": [],
@@ -2012,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "83367bb5-95eb-4715-928b-37ec381acfe0",
    "metadata": {},
    "outputs": [],
@@ -2022,7 +2022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "7b1369a9-33f0-4a43-b909-03e04a27c514",
    "metadata": {},
    "outputs": [
@@ -2072,7 +2072,7 @@
        " 'Ependymal': array(['EPEN', 'EPSC', 'CHOR'], dtype=object)}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "485e7c56-e553-4d14-af74-864e40f74df9",
    "metadata": {},
    "outputs": [
@@ -2094,7 +2094,7 @@
        "       'Immune', 'Ependymal'], dtype=object)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "id": "e59b395f-2e5c-4678-876e-c6915b68be1a",
    "metadata": {},
    "outputs": [],
@@ -2186,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "53ffb433-4d9a-4c20-be4c-1e7529742701",
    "metadata": {},
    "outputs": [
@@ -2330,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "id": "164f42ef-0473-4d24-9035-070a7a6dd762",
    "metadata": {},
    "outputs": [
@@ -2437,7 +2437,7 @@
        "[309098 rows x 2 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2448,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 28,
    "id": "92ec2081-4009-4aed-a959-46ed0a8070d7",
    "metadata": {},
    "outputs": [
@@ -2456,32 +2456,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                  0              1\n",
-      "0      R-BTA-109581   R-BTA-109606\n",
-      "1      R-BTA-109581  R-BTA-5357769\n",
-      "2      R-BTA-109581    R-BTA-75153\n",
-      "3      R-BTA-109582   R-BTA-140877\n",
-      "4      R-BTA-109582   R-BTA-202733\n",
-      "...             ...            ...\n",
-      "21522  R-XTR-983705  R-XTR-5690714\n",
-      "21523  R-XTR-983705   R-XTR-983695\n",
-      "21524  R-XTR-983712  R-XTR-2672351\n",
-      "21525  R-XTR-983712   R-XTR-936837\n",
-      "21526  R-XTR-991365   R-XTR-997272\n",
+      "                 0              1\n",
+      "0     R-HSA-109581   R-HSA-109606\n",
+      "1     R-HSA-109581   R-HSA-169911\n",
+      "2     R-HSA-109581  R-HSA-5357769\n",
+      "3     R-HSA-109581    R-HSA-75153\n",
+      "4     R-HSA-109582   R-HSA-140877\n",
+      "...            ...            ...\n",
+      "2593  R-HSA-983705   R-HSA-983695\n",
+      "2594  R-HSA-983712  R-HSA-2672351\n",
+      "2595  R-HSA-983712   R-HSA-936837\n",
+      "2596  R-HSA-991365   R-HSA-170670\n",
+      "2597  R-HSA-991365   R-HSA-997272\n",
       "\n",
-      "[21527 rows x 2 columns]\n",
-      "['R-MMU-109582']\n",
-      "{'ENSMUSG00000000001': ['R-MMU-109582']}\n",
+      "[2598 rows x 2 columns]\n",
       "           group                gene\n",
-      "0   R-MMU-381753  ENSMUSG00000053647\n",
-      "1  R-MMU-9709957  ENSMUSG00000053647\n",
-      "0   R-MMU-162582  ENSMUSG00000044337\n",
-      "1   R-MMU-372790  ENSMUSG00000044337\n",
-      "2   R-MMU-373076  ENSMUSG00000044337\n",
-      "1132\n",
-      "****************************************************************************************************\n",
-      "****************************************************************************************************\n",
-      "****************************************************************************************************\n"
+      "0  R-MMU-1852241  ENSMUSG00000042050\n",
+      "1  R-MMU-5617833  ENSMUSG00000042050\n",
+      "2  R-MMU-5620924  ENSMUSG00000042050\n",
+      "0  R-MMU-1430728  ENSMUSG00000020027\n",
+      "1    R-MMU-71291  ENSMUSG00000020027\n",
+      "0\n"
+     ]
+    },
+    {
+     "ename": "NodeNotFound",
+     "evalue": "Source root is not in G",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNodeNotFound\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 156\u001b[0m\n\u001b[1;32m    152\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m masking[\u001b[38;5;28mlen\u001b[39m(masking) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m    153\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m masking, layers_node, train_x, test_x\n\u001b[0;32m--> 156\u001b[0m masking, layers_node, train_x, test_x \u001b[38;5;241m=\u001b[39m \u001b[43mget_masking\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../reactome/ReactomePathways.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m    157\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mpathway_genes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    158\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../reactome/ReactomePathwaysRelation.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m    159\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mtrain_x\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    160\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mtest_x\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    161\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mtrain_y\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    162\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mdatatype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcelltype\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m    163\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mspecies\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mmouse\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m    164\u001b[0m \u001b[43m                                                        \u001b[49m\u001b[43mn_hidden\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[28], line 102\u001b[0m, in \u001b[0;36mget_masking\u001b[0;34m(pathway_names, pathway_genes, relations_file_name, train_x, test_x, train_y, datatype, species, n_hidden)\u001b[0m\n\u001b[1;32m     99\u001b[0m             original_network\u001b[38;5;241m.\u001b[39mremove_node(original_terminal_nodes[i])\n\u001b[1;32m    100\u001b[0m     original_terminal_nodes \u001b[38;5;241m=\u001b[39m [n \u001b[38;5;28;01mfor\u001b[39;00m n, d \u001b[38;5;129;01min\u001b[39;00m original_network\u001b[38;5;241m.\u001b[39mout_degree() \u001b[38;5;28;01mif\u001b[39;00m d \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m--> 102\u001b[0m sub_graph \u001b[38;5;241m=\u001b[39m \u001b[43mnx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mego_graph\u001b[49m\u001b[43m(\u001b[49m\u001b[43moriginal_network\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mroot\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mradius\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_hidden\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#subgraph of neighbors centered at node \"root\" <= a given radius (n_level).\u001b[39;00m\n\u001b[1;32m    103\u001b[0m sub_terminal_nodes \u001b[38;5;241m=\u001b[39m [n \u001b[38;5;28;01mfor\u001b[39;00m n, d \u001b[38;5;129;01min\u001b[39;00m sub_graph\u001b[38;5;241m.\u001b[39mout_degree() \u001b[38;5;28;01mif\u001b[39;00m d \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m    105\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m sub_terminal_nodes:\n",
+      "File \u001b[0;32m~/.local/lib/python3.12/site-packages/networkx/utils/decorators.py:789\u001b[0m, in \u001b[0;36margmap.__call__.<locals>.func\u001b[0;34m(_argmap__wrapper, *args, **kwargs)\u001b[0m\n\u001b[1;32m    788\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfunc\u001b[39m(\u001b[38;5;241m*\u001b[39margs, __wrapper\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m--> 789\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43margmap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_lazy_compile\u001b[49m\u001b[43m(\u001b[49m\u001b[43m__wrapper\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<class 'networkx.utils.decorators.argmap'> compilation 16:3\u001b[0m, in \u001b[0;36margmap_ego_graph_13\u001b[0;34m(G, n, radius, center, undirected, distance, backend, **backend_kwargs)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbz2\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgzip\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01minspect\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.12/site-packages/networkx/utils/backends.py:633\u001b[0m, in \u001b[0;36m_dispatchable.__call__\u001b[0;34m(self, backend, *args, **kwargs)\u001b[0m\n\u001b[1;32m    628\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Returns the result of the original function, or the backend function if\u001b[39;00m\n\u001b[1;32m    629\u001b[0m \u001b[38;5;124;03mthe backend is specified and that backend implements `func`.\"\"\"\u001b[39;00m\n\u001b[1;32m    631\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m backends:\n\u001b[1;32m    632\u001b[0m     \u001b[38;5;66;03m# Fast path if no backends are installed\u001b[39;00m\n\u001b[0;32m--> 633\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43morig_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    635\u001b[0m \u001b[38;5;66;03m# Use `backend_name` in this function instead of `backend`\u001b[39;00m\n\u001b[1;32m    636\u001b[0m backend_name \u001b[38;5;241m=\u001b[39m backend\n",
+      "File \u001b[0;32m~/.local/lib/python3.12/site-packages/networkx/generators/ego.py:60\u001b[0m, in \u001b[0;36mego_graph\u001b[0;34m(G, n, radius, center, undirected, distance)\u001b[0m\n\u001b[1;32m     58\u001b[0m         sp, _ \u001b[38;5;241m=\u001b[39m nx\u001b[38;5;241m.\u001b[39msingle_source_dijkstra(G, n, cutoff\u001b[38;5;241m=\u001b[39mradius, weight\u001b[38;5;241m=\u001b[39mdistance)\n\u001b[1;32m     59\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 60\u001b[0m         sp \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(\u001b[43mnx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msingle_source_shortest_path_length\u001b[49m\u001b[43m(\u001b[49m\u001b[43mG\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcutoff\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mradius\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     62\u001b[0m H \u001b[38;5;241m=\u001b[39m G\u001b[38;5;241m.\u001b[39msubgraph(sp)\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m center:\n",
+      "File \u001b[0;32m~/.local/lib/python3.12/site-packages/networkx/utils/decorators.py:789\u001b[0m, in \u001b[0;36margmap.__call__.<locals>.func\u001b[0;34m(_argmap__wrapper, *args, **kwargs)\u001b[0m\n\u001b[1;32m    788\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfunc\u001b[39m(\u001b[38;5;241m*\u001b[39margs, __wrapper\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m--> 789\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43margmap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_lazy_compile\u001b[49m\u001b[43m(\u001b[49m\u001b[43m__wrapper\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<class 'networkx.utils.decorators.argmap'> compilation 20:3\u001b[0m, in \u001b[0;36margmap_single_source_shortest_path_length_17\u001b[0;34m(G, source, cutoff, backend, **backend_kwargs)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mbz2\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mgzip\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01minspect\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mitertools\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.12/site-packages/networkx/utils/backends.py:633\u001b[0m, in \u001b[0;36m_dispatchable.__call__\u001b[0;34m(self, backend, *args, **kwargs)\u001b[0m\n\u001b[1;32m    628\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Returns the result of the original function, or the backend function if\u001b[39;00m\n\u001b[1;32m    629\u001b[0m \u001b[38;5;124;03mthe backend is specified and that backend implements `func`.\"\"\"\u001b[39;00m\n\u001b[1;32m    631\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m backends:\n\u001b[1;32m    632\u001b[0m     \u001b[38;5;66;03m# Fast path if no backends are installed\u001b[39;00m\n\u001b[0;32m--> 633\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43morig_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    635\u001b[0m \u001b[38;5;66;03m# Use `backend_name` in this function instead of `backend`\u001b[39;00m\n\u001b[1;32m    636\u001b[0m backend_name \u001b[38;5;241m=\u001b[39m backend\n",
+      "File \u001b[0;32m~/.local/lib/python3.12/site-packages/networkx/algorithms/shortest_paths/unweighted.py:58\u001b[0m, in \u001b[0;36msingle_source_shortest_path_length\u001b[0;34m(G, source, cutoff)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Compute the shortest path lengths from source to all reachable nodes.\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \n\u001b[1;32m     24\u001b[0m \u001b[38;5;124;03mParameters\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;124;03mshortest_path_length\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m source \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m G:\n\u001b[0;32m---> 58\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m nx\u001b[38;5;241m.\u001b[39mNodeNotFound(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSource \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msource\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not in G\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     59\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cutoff \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     60\u001b[0m     cutoff \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minf\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNodeNotFound\u001b[0m: Source root is not in G"
      ]
     }
    ],
@@ -2543,9 +2558,9 @@
     "    inter_gene = list(set(gene) & set(df['gene']))\n",
     "    genedict = {}\n",
     "    genelist = [df.iloc[0, 0]]\n",
-    "    print(genelist)\n",
+    "    #print(genelist)\n",
     "    genedict[df.iloc[0, 1]] = genelist\n",
-    "    print(genedict)\n",
+    "    #print(genedict)\n",
     "    for i in range(1, df.shape[0]):\n",
     "        if df.iloc[i, 1] == df.iloc[i - 1, 1]:\n",
     "            genelist.append(df.iloc[i, 0])\n",
